Add theme toggle and About page.

--- a/FitLogNeo/Pages/Privacy.cshtml
+++ b/FitLogNeo/Pages/Privacy.cshtml
@@ -3,6 +3,11 @@
 @{
     ViewData["Title"] = "Privacy Policy";
 }
+
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    FitLogNeo is fully-free and open-source, see <a asp-area="" asp-page="/About">About</a> for details.
+    Besides your account info for authentication (like email) really no data is collected. You can audit the source
+    code in the <a href="https://github.com/hoogmin/fitlogneo" rel="noopener noreferrer" target="_blank">repository</a> to verify the app's behavior anytime.
+</p>
