--- a/FitLogNeo/Pages/Index.cshtml
+++ b/FitLogNeo/Pages/Index.cshtml
@@ -6,9 +6,25 @@
 
 @if (Model.IsAuthenticated)
 {
-    <div class="text-center">
+    <div class="text-center justify-content-center">
         <h1 class="display-4">Dashboard</h1>
-        <p>Welcome, @Model.CurrentUser!.UserName</p>     
+        <p>Welcome, @Model.CurrentUser!.UserName</p>
+        <div class="w-50 mx-auto">
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Total Logs
+                    <span class="badge text-bg-primary rounded-pill">@Model.TotalLogs</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    The Last Week
+                    <span class="badge text-bg-primary rounded-pill">@Model.TotalLogs</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Most Recent
+                    <span class="badge text-bg-primary rounded-pill">@(Model.MostRecentLog?.Date.ToString("MMMM dd, yyyy") ?? "None")</span>
+                </li>
+            </ul>
+        </div>
     </div>
 }
 else
@@ -17,10 +33,10 @@ else
         <h1 class="display-4">FitLogNeo</h1>
         <h3>Your Open-Source Fitness Journal.</h3>
         <div class="d-flex flex-column my-3 gap-2 w-50 mx-auto">
-            <a class="btn btn-primary" asp-area="" asp-page="/Identity/Account/Login">
+            <a class="btn btn-primary" asp-area="Identity" asp-page="/Account/Login">
                 Login
             </a>
-            <a class="btn btn-success" asp-area="" asp-page="/Identity/Account/Register">
+            <a class="btn btn-success" asp-area="Identity" asp-page="/Account/Register">
                 Register
             </a>
         </div>
