--- a/FitLogNeo/Pages/FitnessLogs/Delete.cshtml
+++ b/FitLogNeo/Pages/FitnessLogs/Delete.cshtml
@@ -2,21 +2,22 @@
 @model FitLogNeo.Pages.FitnessLogs.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Log";
 }
 
-<h1>Delete</h1>
+<h1 class="my-4">Delete this log?</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<p class="my-4">This is <span class="text-danger">irreversible</span>.</p>
+
 <div>
-    <h4>FitnessLog</h4>
+    <h4>@Model.FitnessLog.Exercise</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FitnessLog.User)
+            @Html.DisplayNameFor(model => model.FitnessLog.Id)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FitnessLog.UserId)
+            @Html.DisplayFor(model => model.FitnessLog.Id)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FitnessLog.Date)
@@ -52,7 +53,25 @@
     
     <form method="post">
         <input type="hidden" asp-for="FitnessLog.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#fitLogDeleteModal">Delete</button> |
         <a asp-page="./Index">Back to List</a>
+        <!-- Modal -->
+        <div class="modal fade" id="fitLogDeleteModal" tabindex="-1" aria-labelledby="fitLogDeleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="fitLogDeleteModalLabel">Are you sure?</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        This action cannot be undone. Delete only if you are sure.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <input type="submit" value="Delete" class="btn btn-danger" />
+                    </div>
+                </div>
+            </div>
+        </div>
     </form>
 </div>
