--- a/FitLogNeo/Pages/FitnessLogs/Details.cshtml
+++ b/FitLogNeo/Pages/FitnessLogs/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FitnessLog.User)
+            @Html.DisplayNameFor(model => model.FitnessLog.Id)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FitnessLog.UserId)
+            @Html.DisplayFor(model => model.FitnessLog.Id)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FitnessLog.Date)
