--- a/FitLogNeo/Pages/FitnessLogs/Edit.cshtml
+++ b/FitLogNeo/Pages/FitnessLogs/Edit.cshtml
@@ -43,7 +43,7 @@
                 <input asp-for="FitnessLog.Weight" class="form-control" />
                 <span asp-validation-for="FitnessLog.Weight" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-2">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
