--- a/FitLogNeo/Pages/Shared/_Layout.cshtml
+++ b/FitLogNeo/Pages/Shared/_Layout.cshtml
@@ -23,14 +23,29 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Index">Home</a>
+                        <li class="nav-item ms-2">
+                            <a class="nav-link px-0" asp-area="" asp-page="/Index">
+                                <span class="fa-solid fa-house"></span>
+                                Home
+                            </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/About">About</a>
+                        <li class="nav-item ms-2">
+                            <a class="nav-link px-0" asp-area="" asp-page="/About">
+                                <span class="fa-solid fa-question"></span>
+                                About
+                            </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Privacy">Privacy</a>
+                        <li class="nav-item ms-2">
+                            <a class="nav-link px-0" asp-area="" asp-page="/Privacy">
+                                <span class="fa-solid fa-shield-halved"></span>
+                                Privacy
+                            </a>
+                        </li>
+                        <li class="nav-item ms-2">
+                            <a class="nav-link px-0" asp-area="" asp-page="/FitnessLogs/Index">
+                                <span class="fa-solid fa-file-lines"></span>
+                                My Logs
+                            </a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
