First version of project

--- a/FitLogNeo/Pages/FitnessLogs/Create.cshtml
+++ b/FitLogNeo/Pages/FitnessLogs/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Create</h1>
 
-<h4>FitnessLog</h4>
+<h4>New Fitness Log</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -42,7 +42,7 @@
                 <input asp-for="FitnessLog.Weight" class="form-control" />
                 <span asp-validation-for="FitnessLog.Weight" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-2">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
