--- a/FitLogNeo/Pages/FitnessLogs/Delete.cshtml
+++ b/FitLogNeo/Pages/FitnessLogs/Delete.cshtml
@@ -57,7 +57,7 @@
         <a asp-page="./Index">Back to List</a>
         <!-- Modal -->
         <div class="modal fade" id="fitLogDeleteModal" tabindex="-1" aria-labelledby="fitLogDeleteModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="fitLogDeleteModalLabel">Are you sure?</h1>
