--- a/FitLogNeo/Pages/FitnessLogs/Details.cshtml
+++ b/FitLogNeo/Pages/FitnessLogs/Details.cshtml
@@ -8,7 +8,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>FitnessLog</h4>
+    <h4>Fitness Log Entry</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
