--- a/FitLogNeo/Pages/FitnessLogs/Index.cshtml
+++ b/FitLogNeo/Pages/FitnessLogs/Index.cshtml
@@ -10,57 +10,28 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.FitnessLog[0].Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FitnessLog[0].Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FitnessLog[0].Exercise)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FitnessLog[0].Reps)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FitnessLog[0].Sets)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FitnessLog[0].Weight)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.FitnessLog) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Exercise)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Reps)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sets)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Weight)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<div class="list-group">
+    @foreach (var log in Model.FitnessLog.OrderByDescending(f => f.Date))
+    {
+        <a asp-page="./Details" asp-route-id="@log.Id" class="list-group-item list-group-item-action my-2">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">@log.Date.ToString("MM/dd/yyyy hh:mm tt")</h5>
+                <small>@((DateTime.Today - log.Date).Days) day(s) ago</small>
+            </div>
+            <p class="mb-1">
+                @(log.Exercise.Length > 20 ? log.Exercise.Substring(0, 20) + "..." : log.Exercise)
+            </p>
+            <small>
+                <a asp-page="./Edit" asp-route-id="@log.Id">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@log.Id">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@log.Id">Delete</a>
+            </small>
+        </a>
+    }
+
+    @if (Model.FitnessLog.Count <= 0)
+    {
+        <h5 class="mt-2">No Fitness Logs...</h5>
+    }
+</div>
